[package]
name = "memory-image-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "miv"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
eframe = "0.26.2"
env_logger = "0.11.2"
image = "0.24.9"
log = "0.4.21"
read-process-memory = "0.1.6"
sysinfo = "0.30.6"
